*** empty log message ***

--- a/doc/src/manual/ch-messages.tex
+++ b/doc/src/manual/ch-messages.tex
@@ -836,7 +836,7 @@ Slightly different code is generated for classes that are rooted in
 \fname{cObject} than for those which are not.
 If there is no \ttt{extends}, the generated class will not be
 derived from \fname{cObject}, thus it will not have \fname{name()},
-\fname{className()}, \fname{setOwner()}, etc. methods.
+\fname{className()}, etc. methods.
 To create a class with those methods, you have to explicitly write
 \ttt{extends cObject}.
 
