--- a/doc/usman/ch-run-sim.tex
+++ b/doc/usman/ch-run-sim.tex
@@ -459,7 +459,7 @@ print status update every n events (on today's computers, and
 for a typical model, this will produce an update every few seconds,
 perhaps a few times per second) \\\hline
 %%
-\fpar{performance-display}=yes/no (default: no) & In express mode only:
+\fpar{performance-display}=yes/no (default: yes) & In express mode only:
 print detailed performance information. Turning it on results in a 3-line
 entry printed on each update, containing ev/sec, simsec/sec, ev/simsec,
 number of messages created/still present/currently scheduled in FES.
