--- a/doc/src/manual/ch-messages.tex
+++ b/doc/src/manual/ch-messages.tex
@@ -293,7 +293,7 @@ In future {\opp} models, the protocol should be represented
 in the message subclass (i.e. instances of class
 \texttt{IPv6Packet} represent IPv6 packets,
 and \texttt{EthernetFrame} represents Ethernet frames) and/or
-in the message kind value. PDU usually is represented
+in the message kind value. PDU is usually represented
 as a field inside the message class (a protocol header field).
 
 If the former case, the C++ \ttt{dynamic\_cast} operator can be used
