--- a/doc/usman/history.tex
+++ b/doc/usman/history.tex
@@ -25,7 +25,7 @@
                sending/receiving and other simple module related functions
                moved to chapter "Simple Modules"; cMessage treatment from
                "Simulation Library" merged with message subclassing chapter
-               into new chapter "Messages".
+               into new chapter "Messages". Deprecated cPacket.
                Removed sections "Simulation techniques" and
                "Coding conventions", and their useful fragments were incorporated
                elsewhere. Added/created sections about message transmission
