--$relname released-- line added to ChangeLog by _scripts/tag

--- a/doc/src/manual/ChangeLog
+++ b/doc/src/manual/ChangeLog
@@ -1,3 +1,5 @@
+2003-06-16  ------ omnetpp-2.3 released ------
+
 2003-06-15  Andras Varga
 
 	* major revision -- see history.tex for details. Changes we made 
