--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,5 @@
+2003-06-16  ------ omnetpp-2.3 released ------
+
 2003-05-26  Andras Varga
 
 	* cOutVector inspector: added "autoscale" checkbox to Options dialog
