--- a/doc/src/manual/usman.tex
+++ b/doc/src/manual/usman.tex
@@ -11,7 +11,21 @@
 \usepackage{fancyhdr}   %% custom headers and footers
 
 \usepackage{tocbibind}  %% makes Bibliography and Index show up in TOC
-\settocbibname{References} 
+\settocbibname{References}
+
+\setlength{\textwidth}{170mm}
+%\setlength{\oddsidemargin}{12.5mm}
+%\setlength{\evensidemargin}{12.5mm}
+%\setlength{\topmargin}{0mm}
+\setlength{\textheight}{230mm}
+%\setlength{\parskip}{1ex}
+%\setlength{\parindent}{5ex}
+
+\renewcommand{\bottomfraction}{0.9}
+\renewcommand{\topfraction}{0.9}
+\renewcommand{\floatpagefraction}{0.9}
+
+
 
 %% try to cure overfull hboxes
 %% \tolerance=500
