--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-24  Andras Varga
+
+	* implemented Inspect|Find/Inspect objects dialog, a filtered-ordered 
+	dialog of all objects.
+
 2003-07-22  Andras Varga
 
 	* structinsp.cc/h: "Fields" tab in message inspector now recursively 
