--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-27  Andras Varga
+
+	* ned.dtd: added source-code attribute to top-level elements; this 
+	is useful for documentation generation.
+
 2003-06-16  ------ omnetpp-2.3 released ------
 
 2003-03-15  ------ omnetpp-2.3b2 released ------
