--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-28  Andras Varga
+
+	* opp_neddoc/opp_neddocall: enhanced documentation generation, output 
+	is now multi-frame html. Generated files go to the html/ subdirectory.
+
 2003-06-16  ------ omnetpp-2.3 released ------
 
 2003-05-24  Andras Varga
