--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-31  Andras Varga
+
+	* updated for current syntax of message declarations (dtd change)
+
 2003-07-27  Andras Varga
 
 	* ned.dtd: added source-code attribute to top-level elements; this 
