--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,11 @@
+2003-08-03  Andras Varga
+
+	* bugfix: if a simple module was typed in the NED text, it was lost 
+	when switching back to graphics
+
+	* bugfix: when a loop connection was deleted in graphics mode, 
+	empty for loop was left behind which is syntactically invalid in NED
+
 2003-08-01  Andras Varga
 
 	* random submodule placement (used when display string doesn't contain
