--- a/doc/usman/ChangeLog
+++ b/doc/usman/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-07  Andras Varga
+
+	* ch-neddoc.tex: added. TBD to be finished and added to the manual!
+
 2003-06-16  ------ omnetpp-2.3 released ------
 
 2003-06-15  Andras Varga
