--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-12  Andras Varga
+
+	* opp_msgc: implemented -h option, meaning identical to nedc 
+	[patch by Johnny Lai]
+
 2003-07-27  Andras Varga
 
 	* nedtool: implemented -t option (store source code), needed for
