--- a/doc/usman/ch-neddoc.tex
+++ b/doc/usman/ch-neddoc.tex
@@ -282,7 +282,7 @@ Example:
 
 \begin{verbatim}
 //
-// @indexpage
+// @titlepage
 // <h1>Ethernet Model Documentation</h1>
 //
 // This documents the Ethernet model created by David Wu and refined by Andras
