--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-20  Andras Varga
+
+	* opp_makemake.in, opp_nmakemake: added missing dependency of _m.h 
+	files on .msg files.
+
 2003-07-28  Andras Varga
 
 	* opp_neddoc/opp_neddocall: enhanced documentation generation, output 
